Anki card selected text (#1809)
* Add support for injecting the text selection into Anki cards

* Add selection-text

* Upgrade to add {selection-text}

* Update descriptions

* Update test data

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -2859,6 +2859,10 @@
                     <td>The full search query shown on the search page.</td>
                 </tr>
                 <tr>
+                    <td><code class="anki-field-marker">{selection-text}</code></td>
+                    <td>The selected text on the search page or popup.</td>
+                </tr>
+                <tr>
                     <td><code class="anki-field-marker">{sentence}</code></td>
                     <td>Sentence, quote, or phrase that the term or kanji appears in from the source content.</td>
                 </tr>
