Text parse updates (#1811)
* Expose more settings to QueryParser

* Rename textParse to parseText

* Refactor

* Convert reading inside QueryParser rather than Backend

* Remove use of readingMode from backend

* Rename

* Update parseText args

* Simplify

* Update results

* Move use of optionsContext

* Run mecab and internal parser in parallel

* Added "dictionary-reading" reading mode

* Update romaji conversion case

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -1224,6 +1224,7 @@
                     <option value="hiragana">ひらがな</option>
                     <option value="katakana">カタカナ</option>
                     <option value="romaji">Romaji</option>
+                    <option value="dictionary-reading">Dictionary reading</option>
                 </select>
             </div>
         </div></div>
