--- a/ext/settings.html
+++ b/ext/settings.html
@@ -2868,6 +2868,10 @@
                     <td>Sentence, quote, or phrase that the term or kanji appears in from the source content.</td>
                 </tr>
                 <tr>
+                    <td><code class="anki-field-marker">{sentence-furigana}</code></td>
+                    <td>Sentence, quote, or phrase that the term or kanji appears in from the source content, with furigana added.</td>
+                </tr>
+                <tr>
                     <td><code class="anki-field-marker">{url}</code></td>
                     <td>Address of the web page in which the term or kanji appeared in.</td>
                 </tr>
