Duplicate scope check all models (#1810)
* Add duplicateScopeCheckAllModels option to createNote

* Add duplicateScopeCheckAllModels option

* Add setting

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -1495,6 +1495,28 @@
             </div>
             <div class="settings-item-children settings-item-children-group" id="anki-card-duplicate-options" hidden>
                 <div class="settings-item">
+                    <div class="settings-item-inner">
+                        <div class="settings-item-left">
+                            <div class="settings-item-label">
+                                Check for duplicates across all models
+                                <a class="more-toggle more-only" data-parent-distance="4">(?)</a>
+                            </div>
+                        </div>
+                        <div class="settings-item-right">
+                            <label class="toggle"><input type="checkbox" data-setting="anki.duplicateScopeCheckAllModels"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
+                        </div>
+                    </div>
+                    <div class="settings-item-children more" hidden>
+                        <p>
+                            By default, duplicate checks are only performed for notes created with the same model.
+                            Enabling this option will check for duplicates across <em>all</em> model types.
+                        </p>
+                        <p>
+                            <a class="more-toggle" data-parent-distance="3">Less&hellip;</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="settings-item">
                     <div class="settings-item-inner settings-item-inner-wrappable">
                         <div class="settings-item-left">
                             <div class="settings-item-label">
