--- a/ext/popup.html
+++ b/ext/popup.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
     <link rel="stylesheet" type="text/css" href="/css/material.css">
     <link rel="stylesheet" type="text/css" href="/css/display.css">
+    <link rel="stylesheet" type="text/css" href="/css/display-pronunciation.css">
     <link rel="stylesheet" type="text/css" href="/css/structured-content.css">
 </head>
 <body>
@@ -109,6 +110,7 @@
 <script src="/js/display/display-resizer.js"></script>
 <script src="/js/display/element-overflow-controller.js"></script>
 <script src="/js/display/option-toggle-hotkey-handler.js"></script>
+<script src="/js/display/pronunciation-generator.js"></script>
 <script src="/js/display/query-parser.js"></script>
 <script src="/js/display/structured-content-generator.js"></script>
 <script src="/js/dom/document-focus-controller.js"></script>
