--- a/ext/search.html
+++ b/ext/search.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
     <link rel="stylesheet" type="text/css" href="/css/material.css">
     <link rel="stylesheet" type="text/css" href="/css/display.css">
+    <link rel="stylesheet" type="text/css" href="/css/display-pronunciation.css">
     <link rel="stylesheet" type="text/css" href="/css/structured-content.css">
     <link rel="stylesheet" type="text/css" href="/css/search.css">
 </head>
@@ -93,6 +94,7 @@
 <script src="/js/display/display-notification.js"></script>
 <script src="/js/display/element-overflow-controller.js"></script>
 <script src="/js/display/option-toggle-hotkey-handler.js"></script>
+<script src="/js/display/pronunciation-generator.js"></script>
 <script src="/js/display/query-parser.js"></script>
 <script src="/js/display/search-action-popup-controller.js"></script>
 <script src="/js/display/search-display-controller.js"></script>
