Anki template renderer abstraction (#1839)
* Add AnkiTemplateRenderer abstraction

* Move Anki-specific template functionality into AnkiTemplateRenderer

* Add documentation comments

--- a/ext/template-renderer.html
+++ b/ext/template-renderer.html
@@ -22,6 +22,7 @@
 <script src="/js/dom/sandbox/css-style-applier.js"></script>
 <script src="/js/language/sandbox/dictionary-data-util.js"></script>
 <script src="/js/language/sandbox/japanese-util.js"></script>
+<script src="/js/templates/sandbox/anki-template-renderer.js"></script>
 <script src="/js/templates/sandbox/template-renderer.js"></script>
 <script src="/js/templates/sandbox/template-renderer-frame-api.js"></script>
 <script src="/js/templates/sandbox/template-renderer-media-provider.js"></script>
