--- a/ext/settings.html
+++ b/ext/settings.html
@@ -3451,6 +3451,7 @@
 <script src="/js/input/hotkey-util.js"></script>
 <script src="/js/language/dictionary-database.js"></script>
 <script src="/js/language/dictionary-importer.js"></script>
+<script src="/js/language/dictionary-importer-media-loader.js"></script>
 <script src="/js/language/sandbox/dictionary-data-util.js"></script>
 <script src="/js/language/sandbox/japanese-util.js"></script>
 <script src="/js/media/audio-system.js"></script>
