--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -409,6 +409,7 @@
 <script src="/js/input/hotkey-util.js"></script>
 <script src="/js/language/dictionary-database.js"></script>
 <script src="/js/language/dictionary-importer.js"></script>
+<script src="/js/language/dictionary-importer-media-loader.js"></script>
 <script src="/js/media/media-util.js"></script>
 <script src="/js/pages/settings/dictionary-controller.js"></script>
 <script src="/js/pages/settings/dictionary-import-controller.js"></script>
