--- a/ext/background.html
+++ b/ext/background.html
@@ -36,6 +36,7 @@
 <script src="/js/data/json-schema.js"></script>
 <script src="/js/data/options-util.js"></script>
 <script src="/js/data/permissions-util.js"></script>
+<script src="/js/data/sandbox/string-util.js"></script>
 <script src="/js/dom/native-simple-dom-parser.js"></script>
 <script src="/js/general/cache-map.js"></script>
 <script src="/js/general/object-property-accessor.js"></script>
