--- a/ext/settings.html
+++ b/ext/settings.html
@@ -3438,6 +3438,7 @@
 <script src="/js/data/json-schema.js"></script>
 <script src="/js/data/options-util.js"></script>
 <script src="/js/data/permissions-util.js"></script>
+<script src="/js/data/sandbox/string-util.js"></script>
 <script src="/js/dom/document-focus-controller.js"></script>
 <script src="/js/dom/document-util.js"></script>
 <script src="/js/dom/dom-data-binder.js"></script>
