--- a/ext/legal.html
+++ b/ext/legal.html
@@ -54,10 +54,10 @@ and are used in conformance with the Group's <a href="https://www.edrdg.org/edrd
 </pre>
     </div></div></div></div></div>
 
-    <h2><a href="https://github.com/wycats/handlebars.js/blob/v4.0.6/LICENSE" target="_blank" rel="noopener noreferrer">Handlebars v4.0.6</a></h2>
+    <h2><a href="https://github.com/handlebars-lang/handlebars.js/blob/v4.7.7/LICENSE" target="_blank" rel="noopener noreferrer">Handlebars 4.7.7</a></h2>
     <div class="settings-group"><div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
 <pre>
-Copyright (C) 2011-2016 by Yehuda Katz
+Copyright (C) 2011-2019 by Yehuda Katz
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
@@ -79,7 +79,7 @@ THE SOFTWARE.
 </pre>
     </div></div></div></div></div>
 
-    <h2><a href="https://github.com/Stuk/jszip/blob/v3.1.3/LICENSE.markdown" target="_blank" rel="noopener noreferrer">JSZip v3.1.3</a></h2>
+    <h2><a href="https://github.com/Stuk/jszip/blob/v3.7.1/LICENSE.markdown" target="_blank" rel="noopener noreferrer">JSZip v3.7.1</a></h2>
     <div class="settings-group"><div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
 <pre>
 Copyright (c) 2009-2016 Stuart Knightley, David Duponchel, Franz Buchinger, António Afonso
