Replace ... with &hellip; (#1902)

--- a/ext/info.html
+++ b/ext/info.html
@@ -34,8 +34,8 @@
                 <li>Browser: <span id="browser"></span></li>
                 <li>Language: <span id="language"></span></li>
                 <li>User agent: <span id="user-agent"></span></li>
-                <li>AnkiConnect version: <span id="anki-connect-version-container"><span id="anki-connect-version">...</span><em class="light" id="anki-connect-version-unknown-message" hidden> (Anki not running or connected)</em></span></li>
-                <li>Installed dictionaries: <span id="installed-dictionaries">...</span><em id="installed-dictionaries-none" hidden>None installed</em></li>
+                <li>AnkiConnect version: <span id="anki-connect-version-container"><span id="anki-connect-version">&hellip;</span><em class="light" id="anki-connect-version-unknown-message" hidden> (Anki not running or connected)</em></span></li>
+                <li>Installed dictionaries: <span id="installed-dictionaries">&hellip;</span><em id="installed-dictionaries-none" hidden>None installed</em></li>
                 <li><a id="settings-export-button">Export settings</a></li>
             </ul>
         </div></div></div></div>
