--- a/ext/settings.html
+++ b/ext/settings.html
@@ -220,7 +220,7 @@
                     <div class="settings-item-label">Result grouping mode</div>
                     <div class="settings-item-description">
                         Change how related results are grouped.
-                        <a class="more-toggle more-only" data-parent-distance="4">More...</a>
+                        <a class="more-toggle more-only" data-parent-distance="4">More&hellip;</a>
                     </div>
                 </div>
                 <div class="settings-item-right">
@@ -2107,8 +2107,8 @@
 <template id="profile-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"><div class="popup-menu-body">
     <button class="popup-menu-item" data-menu-action="moveUp">Move up</button>
     <button class="popup-menu-item" data-menu-action="moveDown">Move down</button>
-    <button class="popup-menu-item" data-menu-action="copyFrom">Copy from...</button>
-    <button class="popup-menu-item" data-menu-action="editConditions">Edit conditions...</button>
+    <button class="popup-menu-item" data-menu-action="copyFrom">Copy from&hellip;</button>
+    <button class="popup-menu-item" data-menu-action="editConditions">Edit conditions&hellip;</button>
     <button class="popup-menu-item" data-menu-action="duplicate">Duplicate</button>
     <button class="popup-menu-item" data-menu-action="delete">Delete</button>
 </div></div></div></template>
