Improve accessibility of links without href (#1915)

--- a/ext/display-templates.html
+++ b/ext/display-templates.html
@@ -29,7 +29,7 @@
             <ol class="entry-body-section-content definition-list"></ol>
         </div>
     </div>
-    <div class="debug-info"><a class="debug-log-link">Log debug info to console</a></div>
+    <div class="debug-info"><a tabindex="0" class="debug-log-link">Log debug info to console</a></div>
 </div></template>
 <template id="headword-template" data-remove-whitespace-text="true"><div class="headword">
     <div class="headword-text-container">
@@ -124,7 +124,7 @@
         <tr><th colspan="3">Dictionary Indices</th></tr>
         <tr><td colspan="3" class="kanji-dictionary-indices"></td></tr>
     </tbody></table>
-    <div class="debug-info"><a class="debug-log-link">Log debug info to console</a></div>
+    <div class="debug-info"><a tabindex="0" class="debug-log-link">Log debug info to console</a></div>
 </div></template>
 <template id="kanji-info-table-template"><table class="kanji-info-table"><tbody class="kanji-info-table-body"></tbody></table></template>
 <template id="kanji-info-table-item-template"><tr class="kanji-info-table-item"><th class="kanji-info-table-item-header"></th><td class="kanji-info-table-item-value"></td></tr></template>
@@ -150,7 +150,7 @@
 <template id="footer-notification-anki-errors-content-template" data-remove-whitespace-text="true"><div class="anki-note-error-info">
     <div class="anki-note-error-header"></div>
     <ul class="anki-note-error-list"></ul>
-    <div class="anki-note-error-log-container"><a class="anki-note-error-log-link">Log debug info to console</a></div>
+    <div class="anki-note-error-log-container"><a tabindex="0" class="anki-note-error-log-link">Log debug info to console</a></div>
 </div></template>
 <template id="profile-list-item-template"><label class="profile-list-item">
     <div class="profile-list-item-selection"><label class="radio"><input type="radio" class="profile-entry-is-default-radio" name="profile-entry-default-radio"><span class="radio-body"><span class="radio-border"></span><span class="radio-dot"></span></span></label></div>
