--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -186,7 +186,7 @@
 <!-- Auxiliary content -->
 <div class="status-footer-container" hidden><div class="status-footer-container2">
     <div class="status-footer">
-        <div class="status-footer-header"><div class="status-footer-header-label">Tasks in progress:</div><a class="status-footer-header-close">Close</a></div>
+        <div class="status-footer-header"><div class="status-footer-header-label">Tasks in progress:</div><a tabindex="0" class="status-footer-header-close">Close</a></div>
         <div class="status-footer-item dictionary-delete-progress" hidden>
             <div class="progress-labels"><div class="progress-info"></div><div class="progress-status"></div></div>
             <div class="progress-bar-track"><div class="progress-bar danger"></div></div>
@@ -218,7 +218,7 @@
                 <div class="settings-item-left">
                     <div class="settings-item-label">
                         Enable support for prefix wildcard searches
-                        <a class="more-toggle more-only" data-parent-distance="4">(?)</a>
+                        <a tabindex="0" class="more-toggle more-only" data-parent-distance="4">(?)</a>
                     </div>
                 </div>
                 <div class="settings-item-right">
@@ -236,7 +236,7 @@
                     they must be re-imported for the option to take effect.
                 </p>
                 <p>
-                    <a class="more-toggle" data-parent-distance="3">Hide&hellip;</a>
+                    <a tabindex="0" class="more-toggle" data-parent-distance="3">Hide&hellip;</a>
                 </p>
             </div>
         </div>
@@ -311,7 +311,7 @@
                 <div class="settings-item-left">
                     <div class="settings-item-label">
                         Prefix wildcard searches supported
-                        <a class="more-toggle more-only" data-parent-distance="4">(?)</a>
+                        <a tabindex="0" class="more-toggle more-only" data-parent-distance="4">(?)</a>
                     </div>
                 </div>
                 <div class="settings-item-right">
@@ -322,7 +322,7 @@
                 <p class="warning-text">
                     Changing this value requires the dictionary to be re-imported.
                 </p>
-                <p><a class="more-toggle" data-parent-distance="3">Hide&hellip;</a></p>
+                <p><a tabindex="0" class="more-toggle" data-parent-distance="3">Hide&hellip;</a></p>
             </div>
         </div>
         <div class="settings-item"><div class="settings-item-children">
