--- a/ext/action-popup.html
+++ b/ext/action-popup.html
@@ -31,24 +31,24 @@
                 <optgroup label="Primary Profile" id="profile-select-option-group"></optgroup>
             </select></span>
         </button>
-        <a class="nav-button action-open-settings" title="Settings" data-hotkey='["global:openSettingsPage","title","Settings ({0})"]'>
+        <a tabindex="0" class="nav-button action-open-settings" title="Settings" data-hotkey='["global:openSettingsPage","title","Settings ({0})"]'>
             <span class="icon" data-icon="cog"></span>
             <div class="nav-button-warning-badge no-dictionaries-enabled-warning" hidden>
                 <div class="nav-button-warning-badge-outer"></div>
                 <div class="nav-button-warning-badge-inner"></div>
             </div>
         </a>
-        <a class="nav-button action-open-permissions" title="Permissions" hidden>
+        <a tabindex="0" class="nav-button action-open-permissions" title="Permissions" hidden>
             <span class="icon" data-icon="key"></span>
             <div class="nav-button-warning-badge permissions-required-warning" hidden>
                 <div class="nav-button-warning-badge-outer"></div>
                 <div class="nav-button-warning-badge-inner"></div>
             </div>
         </a>
-        <a class="nav-button action-open-search" title="Search" data-hotkey='["global:openSearchPage","title","Search ({0})\nShift+click to open here"]'>
+        <a tabindex="0" class="nav-button action-open-search" title="Search" data-hotkey='["global:openSearchPage","title","Search ({0})\nShift+click to open here"]'>
             <span class="icon" data-icon="magnifying-glass"></span>
         </a>
-        <a class="nav-button action-open-info" title="Information" data-hotkey='["global:openInfoPage","title","Information ({0})"]'>
+        <a tabindex="0" class="nav-button action-open-info" title="Information" data-hotkey='["global:openInfoPage","title","Information ({0})"]'>
             <span class="icon" data-icon="question-mark-circle"></span>
         </a>
     </div>
@@ -59,24 +59,24 @@
     <label class="link-group">
         <span class="link-group-icon"><input type="checkbox" id="enable-search2"></span><span class="link-group-label">Enable content scanning</span>
     </label>
-    <a class="link-group action-open-settings">
+    <a tabindex="0" class="link-group action-open-settings">
         <span class="link-group-icon" data-icon="chevron"></span>
         <span class="link-group-label">Settings</span>
         <span class="link-group-badge">
             <div class="flex-margin-left warning-badge no-dictionaries-enabled-warning" hidden><span class="icon" data-icon="exclamation-point-short"></span></div>
         </span>
     </a>
-    <a class="link-group action-open-permissions" hidden>
+    <a tabindex="0" class="link-group action-open-permissions" hidden>
         <span class="link-group-icon" data-icon="chevron"></span>
         <span class="link-group-label">Permissions</span>
         <span class="link-group-badge">
             <div class="flex-margin-left warning-badge permissions-required-warning" hidden><span class="icon" data-icon="exclamation-point-short"></span></div>
         </span>
     </a>
-    <a class="link-group action-open-search">
+    <a tabindex="0" class="link-group action-open-search">
         <span class="link-group-icon" data-icon="chevron"></span><span class="link-group-label">Search</span>
     </a>
-    <a class="link-group action-open-info">
+    <a tabindex="0" class="link-group action-open-info">
         <span class="link-group-icon" data-icon="chevron"></span><span class="link-group-label">Information</span>
     </a>
 </div>
