--- a/ext/info.html
+++ b/ext/info.html
@@ -36,7 +36,7 @@
                 <li>User agent: <span id="user-agent"></span></li>
                 <li>AnkiConnect version: <span id="anki-connect-version-container"><span id="anki-connect-version">&hellip;</span><em class="light" id="anki-connect-version-unknown-message" hidden> (Anki not running or connected)</em></span></li>
                 <li>Installed dictionaries: <span id="installed-dictionaries">&hellip;</span><em id="installed-dictionaries-none" hidden>None installed</em></li>
-                <li><a id="settings-export-button">Export settings</a></li>
+                <li><a tabindex="0" id="settings-export-button">Export settings</a></li>
             </ul>
         </div></div></div></div>
     </div>
