Fix hotkey input field conflict (#1963)
* Move comment

* Add DocumentUtil.isInputElement

* Use DocumentUtil.isInputElement

* Fix simple hotkeys (shift or no modifier) preventing text field input

* Improve input detection

* Validate key is an input character before blocking hotkey

* Simplify

* Fix incorrect property

--- a/ext/permissions.html
+++ b/ext/permissions.html
@@ -263,6 +263,7 @@
 <script src="/js/data/anki-util.js"></script>
 <script src="/js/data/permissions-util.js"></script>
 <script src="/js/dom/document-focus-controller.js"></script>
+<script src="/js/dom/document-util.js"></script>
 <script src="/js/dom/html-template-collection.js"></script>
 <script src="/js/dom/panel-element.js"></script>
 <script src="/js/dom/popup-menu.js"></script>
