Add disable-popup-preview option to the settings page (#1974)

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -1980,7 +1980,7 @@
 <div class="content-right">
     <div class="preview-sidebar"><div class="preview-sidebar-inner">
         <div class="preview-frame-container">
-            <iframe src="/popup-preview.html" class="preview-frame" id="popup-preview-frame"></iframe>
+            <iframe class="preview-frame" id="popup-preview-frame"></iframe>
         </div>
     </div></div>
 </div>
