Search CSS updates (#1979)
* Update styles

* Limit the height of the query parser

--- a/ext/popup.html
+++ b/ext/popup.html
@@ -27,11 +27,13 @@
 
                     <span tabindex="-1" id="content-scroll-focus"></span>
 
-                    <div class="scan-disable" id="query-parser-container" hidden>
-                        <div class="search-option" id="query-parser-mode-container" hidden>
-                            <select id="query-parser-mode-select"></select>
+                    <div class="search-header">
+                        <div class="scan-disable scrollbar" id="query-parser-container" hidden>
+                            <div class="search-option" id="query-parser-mode-container" hidden>
+                                <select id="query-parser-mode-select"></select>
+                            </div>
+                            <div id="query-parser-content" lang="ja"></div>
                         </div>
-                        <div id="query-parser-content" lang="ja"></div>
                     </div>
 
                     <div id="dictionary-entries"></div>
