--- a/ext/search.html
+++ b/ext/search.html
@@ -28,33 +28,35 @@
 
                     <span tabindex="-1" id="content-scroll-focus"></span>
 
-                    <div id="intro">
-                        <h1>Yomichan Search</h1>
-                    </div>
+                    <div class="search-header">
+                        <div id="intro">
+                            <h1>Yomichan Search</h1>
+                        </div>
 
-                    <div class="scan-disable">
-                        <div class="search-options">
-                            <label class="search-option">
-                                <label class="toggle"><input type="checkbox" id="wanakana-enable"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
-                                <span class="search-option-label">Automatic kana conversion</span>
-                            </label>
-                            <label class="search-option" id="search-option-clipboard-monitor-container">
-                                <label class="toggle"><input type="checkbox" id="clipboard-monitor-enable"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
-                                <span class="search-option-label">Clipboard monitor</span>
-                            </label>
-                            <div class="search-option" id="query-parser-mode-container" hidden>
-                                <span class="search-option-pre-label">Parser:</span>
-                                <select id="query-parser-mode-select"></select>
+                        <div class="scan-disable">
+                            <div class="search-options">
+                                <label class="search-option">
+                                    <label class="toggle"><input type="checkbox" id="wanakana-enable"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
+                                    <span class="search-option-label">Automatic kana conversion</span>
+                                </label>
+                                <label class="search-option" id="search-option-clipboard-monitor-container">
+                                    <label class="toggle"><input type="checkbox" id="clipboard-monitor-enable"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
+                                    <span class="search-option-label">Clipboard monitor</span>
+                                </label>
+                                <div class="search-option" id="query-parser-mode-container" hidden>
+                                    <span class="search-option-pre-label">Parser:</span>
+                                    <select id="query-parser-mode-select"></select>
+                                </div>
+                            </div>
+                            <div class="search-textbox-container">
+                                <textarea id="search-textbox" class="scrollbar" placeholder="Input a term, expression, sentence, or block of text" autocomplete="off" lang="ja" autofocus></textarea>
+                                <button id="search-button" class="search-button"><span class="icon" data-icon="magnifying-glass"></span></button>
                             </div>
                         </div>
-                        <div class="search-textbox-container">
-                            <textarea id="search-textbox" placeholder="Input a term, expression, sentence, or block of text" autocomplete="off" lang="ja" autofocus></textarea>
-                            <button id="search-button"><span class="icon" data-icon="magnifying-glass"></span></button>
-                        </div>
-                    </div>
 
-                    <div class="scan-disable" id="query-parser-container" hidden>
-                        <div id="query-parser-content" lang="ja"></div>
+                        <div class="scan-disable scrollbar" id="query-parser-container" hidden>
+                            <div id="query-parser-content" lang="ja"></div>
+                        </div>
                     </div>
 
                     <div id="dictionary-entries"></div>
