String frequency support (#1989)
* Restore support for string frequency values

* Add support for {value, displayValue} frequencies

* Update test data

* Improve number parsing of string frequencies

* Improve reading detection

* Expose a displayValue property for frequency information

* Update docs

* Expose displayValue to Anki note data

* Fix translator

* Update display generation

* Update test data

* Update counts

--- a/ext/display-templates.html
+++ b/ext/display-templates.html
@@ -71,13 +71,13 @@
             <rt class="frequency-disambiguation-reading"></rt>
         </ruby></span>
         <span class="frequency-separator"></span>
-        <span class="frequency-value"></span>
+        <span class="frequency-value-list"></span>
     </span></span>
 </span></span></template>
 <template id="kanji-frequency-item-template" data-remove-whitespace-text="true"><span class="frequency-item"><span class="tag tag-has-body frequency-tag" data-category="frequency" data-frequency-type="kanji">
     <span class="tag-label"><span class="tag-label-content"></span></span>
     <span class="tag-body"><span class="tag-body-content frequency-body">
-        <span class="frequency-value"></span>
+        <span class="frequency-value-list"></span>
     </span></span>
 </span></span></template>
 
