Display menu button (#1992)
* Implement new menu which includes a debug log option

* Update wording

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -732,7 +732,7 @@
         <div class="settings-item advanced-only"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-label">Show debug information</div>
-                <div class="settings-item-description">A link to log debugging information will be shown in the search results.</div>
+                <div class="settings-item-description">A menu option to log debugging information will be shown in the search results.</div>
             </div>
             <div class="settings-item-right">
                 <label class="toggle"><input type="checkbox" data-setting="general.debugInfo"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
