--- a/ext/permissions.html
+++ b/ext/permissions.html
@@ -123,6 +123,18 @@
                 <label class="toggle"><input type="checkbox" class="permissions-toggle" data-required-permissions="nativeMessaging"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
             </div>
         </div></div>
+        <div class="settings-item" data-hide-for-manifest-version="3"><div class="settings-item-inner">
+            <div class="settings-item-left">
+                <div class="settings-item-label"><code>webNavigation</code> <span class="light">(optional)</span></div>
+                <div class="settings-item-description">
+                    Yomichan may require this permission to inject content scripts for certain browsers
+                    if Google Docs accessibility mode is enabled.
+                </div>
+            </div>
+            <div class="settings-item-right">
+                <label class="toggle"><input type="checkbox" class="permissions-toggle" data-required-permissions="webNavigation"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
+            </div>
+        </div></div>
         <div class="settings-item"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-label">Allow in private windows <span class="light">(optional)</span></div>
