Add AccessibilityController class, which dynamically registers (#2024)
and unregisters the google-docs.js content script

--- a/ext/background.html
+++ b/ext/background.html
@@ -23,6 +23,7 @@
 
 <script src="/js/yomichan.js"></script>
 
+<script src="/js/accessibility/accessibility-controller.js"></script>
 <script src="/js/background/backend.js"></script>
 <script src="/js/background/environment.js"></script>
 <script src="/js/background/profile-conditions-util.js"></script>
