Add support for logging Anki errors on the settings page (#2073)

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -1569,6 +1569,9 @@
                 </div>
             </div>
             <div class="settings-item-children" id="anki-error-message-details-container" hidden>
+                <p>
+                    <a tabindex="0" id="anki-error-log">Log error to console</a>
+                </p>
                 <p class="danger-text" id="anki-error-invalid-response-info" hidden>
                     Attempting to connect to Anki can sometimes return an error message which includes "Invalid response",
                     which may indicate that the value of the <em>AnkiConnect server address</em> option is incorrect.
