Rename MediaLoader to DisplayContentManager (#2087)

--- a/ext/popup.html
+++ b/ext/popup.html
@@ -106,6 +106,7 @@
 <script src="/js/display/display.js"></script>
 <script src="/js/display/display-anki.js"></script>
 <script src="/js/display/display-audio.js"></script>
+<script src="/js/display/display-content-manager.js"></script>
 <script src="/js/display/display-generator.js"></script>
 <script src="/js/display/display-history.js"></script>
 <script src="/js/display/display-notification.js"></script>
@@ -132,7 +133,6 @@
 <script src="/js/language/sandbox/japanese-util.js"></script>
 <script src="/js/language/text-scanner.js"></script>
 <script src="/js/media/audio-system.js"></script>
-<script src="/js/media/media-loader.js"></script>
 <script src="/js/media/media-util.js"></script>
 <script src="/js/media/text-to-speech-audio.js"></script>
 <script src="/js/script/dynamic-loader.js"></script>
