--- a/ext/template-renderer.html
+++ b/ext/template-renderer.html
@@ -24,6 +24,7 @@
 <script src="/js/language/sandbox/dictionary-data-util.js"></script>
 <script src="/js/language/sandbox/japanese-util.js"></script>
 <script src="/js/templates/sandbox/anki-template-renderer.js"></script>
+<script src="/js/templates/sandbox/anki-template-renderer-content-manager.js"></script>
 <script src="/js/templates/sandbox/template-renderer.js"></script>
 <script src="/js/templates/sandbox/template-renderer-frame-api.js"></script>
 <script src="/js/templates/sandbox/template-renderer-media-provider.js"></script>
