Settings advanced indicators (#2103)
* Update the advanced toggle to have a custom color

* Add indicators to advanced-only settings

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -42,7 +42,7 @@
         </div>
         <div class="sidebar-bottom">
             <label class="button outline-item"><span class="outline-item-left">
-                <label class="toggle"><input id="advanced-checkbox" type="checkbox" data-setting="general.showAdvanced"
+                <label class="toggle advanced-toggle"><input id="advanced-checkbox" type="checkbox" data-setting="general.showAdvanced"
                     data-transform='{
                         "type": "setAttribute",
                         "selector": ":root",
