--- a/ext/settings.html
+++ b/ext/settings.html
@@ -2819,21 +2819,34 @@
 <div id="input-action-prevention-modal" class="modal" tabindex="-1" role="dialog" hidden><div class="modal-content modal-content-small">
     <div class="modal-header"><div class="modal-title">Input Action Prevention</div></div>
     <div class="modal-body">
-        <strong>Prevent middle mouse button actions on:</strong>
-        <div class="flex-column-nowrap flex-column-nowrap-spaced margin-left">
-            <label class="flex-label">
+        <div>
+            Prevent middle mouse button actions on:
+            <a tabindex="0" class="more-toggle more-only" data-parent-distance="2">(?)</a>
+        </div>
+        <div class="more" hidden>
+            <p>
+                This option is used to disable the default action of the middle mouse button in different contexts.
+                This can be useful for preventing the scroll action that the middle mouse button is typically mapped to,
+                which is otherwise difficult to disable inside extension pages via other means.
+            </p>
+            <p>
+                <a tabindex="0" class="more-toggle" data-parent-distance="3">Less&hellip;</a>
+            </p>
+        </div>
+        <div class="input-prevention-option-list">
+            <label class="input-prevention-option-list-item">
                 <label class="checkbox"><input type="checkbox" data-setting="scanning.preventMiddleMouse.onWebPages"><span class="checkbox-body"><span class="checkbox-fill"></span><span class="checkbox-border"></span><span class="checkbox-check"></span></span></label>
                 <span>Webpages</span>
             </label>
-            <label class="flex-label">
+            <label class="input-prevention-option-list-item">
                 <label class="checkbox"><input type="checkbox" data-setting="scanning.preventMiddleMouse.onPopupPages"><span class="checkbox-body"><span class="checkbox-fill"></span><span class="checkbox-border"></span><span class="checkbox-check"></span></span></label>
                 <span>Popups</span>
             </label>
-            <label class="flex-label">
+            <label class="input-prevention-option-list-item">
                 <label class="checkbox"><input type="checkbox" data-setting="scanning.preventMiddleMouse.onSearchPages"><span class="checkbox-body"><span class="checkbox-fill"></span><span class="checkbox-border"></span><span class="checkbox-check"></span></span></label>
                 <span>Search page</span>
             </label>
-            <label class="flex-label">
+            <label class="input-prevention-option-list-item">
                 <label class="checkbox"><input type="checkbox" data-setting="scanning.preventMiddleMouse.onSearchQuery"><span class="checkbox-body"><span class="checkbox-fill"></span><span class="checkbox-border"></span><span class="checkbox-check"></span></span></label>
                 <span>Search query</span>
             </label>
