--- a/ext/settings.html
+++ b/ext/settings.html
@@ -664,16 +664,18 @@
                     <div class="settings-item-group-item">
                         <div class="settings-item-group-item-label">Body</div>
                         <select data-setting="general.popupTheme" class="short-width short-height">
-                            <option value="default">Light</option>
+                            <option value="light">Light</option>
                             <option value="dark">Dark</option>
+                            <option value="browser">Browser</option>
                         </select>
                     </div>
                     <div class="settings-item-group-item">
                         <div class="settings-item-group-item-label">Shadow</div>
                         <select data-setting="general.popupOuterTheme" class="short-width short-height">
-                            <option value="auto">Auto</option>
-                            <option value="default">Light</option>
+                            <option value="site">Auto</option>
+                            <option value="light">Light</option>
                             <option value="dark">Dark</option>
+                            <option value="browser">Browser</option>
                         </select>
                     </div>
                 </div>
