--- a/ext/popup-preview.html
+++ b/ext/popup-preview.html
@@ -44,6 +44,7 @@
 <script src="/js/app/frontend.js"></script>
 <script src="/js/app/popup.js"></script>
 <script src="/js/app/popup-factory.js"></script>
+<script src="/js/app/theme-controller.js"></script>
 <script src="/js/comm/api.js"></script>
 <script src="/js/comm/cross-frame-api.js"></script>
 <script src="/js/comm/frame-ancestry-handler.js"></script>
