--- a/ext/search.html
+++ b/ext/search.html
@@ -84,6 +84,7 @@
 
 <script src="/js/yomichan.js"></script>
 
+<script src="/js/app/theme-controller.js"></script>
 <script src="/js/comm/api.js"></script>
 <script src="/js/comm/clipboard-monitor.js"></script>
 <script src="/js/comm/cross-frame-api.js"></script>
