--- a/ext/popup.html
+++ b/ext/popup.html
@@ -97,6 +97,7 @@
 
 <script src="/js/yomichan.js"></script>
 
+<script src="/js/app/theme-controller.js"></script>
 <script src="/js/comm/api.js"></script>
 <script src="/js/comm/cross-frame-api.js"></script>
 <script src="/js/comm/frame-endpoint.js"></script>
