Fix capitalization of "Non-Standard" (#2153)

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -1776,14 +1776,14 @@
                     <select data-setting="anki.displayTags">
                         <option value="never">Never</option>
                         <option value="always">Always</option>
-                        <option value="non-standard">Non-Standard</option>
+                        <option value="non-standard">Non-standard</option>
                     </select>
                 </div>
             </div>
             <div class="settings-item-children more" hidden>
                 <p>
                     When coming across a word that is already in an Anki deck, a button will appear that shows
-                    the tags the card has. If set to <em>Non-Standard</em>, all tags that are included in the
+                    the tags the card has. If set to <em>Non-standard</em>, all tags that are included in the
                     <em>Card tags</em> option will be filtered out from the list. If no tags remain after filtering,
                     then the button will not be shown.
                 </p>
